# AFLENT-Protocol

./: CMakeLists.txt
include/: hw2.h
src/: encryption.md  hw2.c  hw2_main.c
tests/src/: encrypt_test.cpp  expand_key_test.cpp  part1.c  part2.cpp  part3.cpp
